src/objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>CRM-MC-ESPSFDCQI-5858 - Type of contact related to the Account, Employee or Customer</description>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Date_Formula__c</fullName>
        <description>CRM-MC-ESPSFDCQI-6542</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>CRM-MC-ESPSFDCQI-5858 - Displays the Department listed on the Contact&apos;s related user record</description>
        <formula>Contact.Salesforce_User__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focus_Prioritization__c</fullName>
        <description>CRM-MC-ESPSFDCQI-5861 - Calculates the priority of Focus areas. Users with prioritized Focus areas will display in the Account Teams section of the Tear Sheets.</description>
        <formula>IF(INCLUDES(Focus__c, &apos;R&amp;DS&apos;) , 1, 
				IF(INCLUDES(Focus__c, &apos;IQVIA&apos;) , 2,
						IF(INCLUDES(Focus__c, &apos;Clinical&apos;) , 3,
								IF(INCLUDES(Focus__c, &apos;Global Lab&apos;) , 4,
										IF(INCLUDES(Focus__c, &apos;Core-Powered Clinical Development&apos;) , 5, 6)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Focus Prioritization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Focus__c</fullName>
        <description>CRM-MC-ESPSFDCQI-5858 - Focus area(s) of the employee on the Account</description>
        <label>Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Channel Dynamics​</fullName>
                </value>
                <value>
                    <fullName>Client Services</fullName>
                    <isActive>false</isActive>
                    <label>Client Services</label>
                </value>
                <value>
                    <fullName>Clinical (Core)</fullName>
                </value>
                <value>
                    <fullName>Clinical Technology</fullName>
                </value>
                <value>
                    <fullName>Commercial Compliance</fullName>
                </value>
                <value>
                    <fullName>Commercial Outsourcing</fullName>
                    <isActive>false</isActive>
                    <label>Commercial Outsourcing</label>
                </value>
                <value>
                    <fullName>Commercial Services</fullName>
                </value>
                <value>
                    <fullName>Commercial Solutions</fullName>
                </value>
                <value>
                    <fullName>Commercial Tech</fullName>
                </value>
                <value>
                    <fullName>Connected Devices</fullName>
                </value>
                <value>
                    <fullName>Contract Sales and Medical Services</fullName>
                    <isActive>false</isActive>
                    <label>Contract Sales and Medical Services</label>
                </value>
                <value>
                    <fullName>Core-Powered Clinical Development</fullName>
                </value>
                <value>
                    <fullName>CSMS &amp; Novasyte</fullName>
                </value>
                <value>
                    <fullName>Data Sciences</fullName>
                </value>
                <value>
                    <fullName>DSSR</fullName>
                    <isActive>false</isActive>
                    <label>DSSR</label>
                </value>
                <value>
                    <fullName>FSP</fullName>
                </value>
                <value>
                    <fullName>Global Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Global Market Insights</fullName>
                </value>
                <value>
                    <fullName>Global Payer Provider &amp; Real World Networks</fullName>
                </value>
                <value>
                    <fullName>Information - Channel &amp; Specialty Data</fullName>
                </value>
                <value>
                    <fullName>Information - ChannelDynamics Local</fullName>
                </value>
                <value>
                    <fullName>Information - Consumer Health</fullName>
                </value>
                <value>
                    <fullName>Information - Marketing Services</fullName>
                </value>
                <value>
                    <fullName>Information - National Tracking</fullName>
                </value>
                <value>
                    <fullName>Information - OneKey (Reference Data)</fullName>
                </value>
                <value>
                    <fullName>Information Sales Territory Management</fullName>
                </value>
                <value>
                    <fullName>Integrated Global Compliance</fullName>
                </value>
                <value>
                    <fullName>IQVIA</fullName>
                </value>
                <value>
                    <fullName>Medical Safety Info</fullName>
                </value>
                <value>
                    <fullName>Nexxus MI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <description>CRM-MC-ESPSFDCQI-5858 - Function of the employee on the Account</description>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Lead</fullName>
                </value>
                <value>
                    <fullName>Service Lead</fullName>
                </value>
                <value>
                    <fullName>Alliance Lead</fullName>
                </value>
                <value>
                    <fullName>Client Operation Lead</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Delivery Lead</fullName>
                </value>
                <value>
                    <fullName>COE Lead / Category Lead / SME</fullName>
                </value>
                <value>
                    <fullName>Strategic Pricing</fullName>
                </value>
                <value>
                    <fullName>Customer Success Manager</fullName>
                </value>
                <value>
                    <fullName>Project Finance Manager</fullName>
                </value>
                <value>
                    <fullName>RWS-RBU Account Director</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geographic_Responsibility__c</fullName>
        <description>CRM-MC-ESPSFDCQI-5858 - Geographic Responsibility of the employee on the Account Team</description>
        <label>Geographic Responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Regional / HQ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>USCAN</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>CESE</fullName>
                    <isActive>false</isActive>
                    <label>CESE</label>
                </value>
                <value>
                    <fullName>European</fullName>
                    <isActive>false</isActive>
                    <label>European</label>
                </value>
                <value>
                    <fullName>NEMEA</fullName>
                    <isActive>false</isActive>
                    <label>NEMEA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Formula__c</fullName>
        <description>CRM-MC-ESPSFDCQI-6542</description>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RBU__c</fullName>
        <label>RBU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>CRM-MC-ESPSFDCQI-5858 - Used to specify the Region if &quot;Regional / HQ&quot; is selected for employee&apos;s Geographic Responsibility</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Geographic_Responsibility__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Andean Latin America</fullName>
                </value>
                <value>
                    <fullName>North Latin America</fullName>
                </value>
                <value>
                    <fullName>South Latin America</fullName>
                </value>
                <value>
                    <fullName>Southeast Asia Region</fullName>
                </value>
                <value>
                    <fullName>Australia and New Zealand</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>East Europe</fullName>
                </value>
                <value>
                    <fullName>Spain &amp; Portugal</fullName>
                </value>
                <value>
                    <fullName>Italy and Greece</fullName>
                </value>
                <value>
                    <fullName>AMESA</fullName>
                </value>
                <value>
                    <fullName>Northern Europe</fullName>
                </value>
                <value>
                    <fullName>UK &amp; Ireland</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Strength__c</fullName>
        <label>Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <description>CRM-MC-ESPSFDCQI-5858 - Used to identify the Segment Responsibility of the employee</description>
        <label>Segment Responsibility</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Lifesciences / Pharma</fullName>
                </value>
                <value>
                    <fullName>Medtech</fullName>
                </value>
                <value>
                    <fullName>Consumer Health</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>CRM-MC-ESPSFDCQI-5858 - Displays the Title listed on the Contact&apos;s related user record</description>
        <formula>Contact.Salesforce_User__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Country__c</fullName>
        <description>CRM-MC-ESPSFDCQI-5858 - Displays the User Country listed on the Contact&apos;s related user record</description>
        <formula>TEXT(Contact.Salesforce_User__r.User_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Country</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>ACR_VR01_CRM_CONTACTmustbeemployee</fullName>
        <active>true</active>
        <description>CRM-MC-ESPSFDCQI-6057 - If an account team member is added, the contact must have a record type of IQVIA User Contact</description>
        <errorConditionFormula>AND(ISPICKVAL(Contact_Type__c, &quot;Employee&quot;),  Contact.RecordType.DeveloperName != &quot;IQVIA_User_Contact&quot;)</errorConditionFormula>
        <errorMessage>Please select an IQVIA User Contact for the Account Team Member</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACR_VR_CRM_FOCUSusonlyfocusareas</fullName>
        <active>true</active>
        <description>&quot;US Only&quot; picklist values on the Focus field are only available to select if related user has USA value in the &quot;User Country&quot; field</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Contact.Salesforce_User__r.User_Country__c, &quot;USA&quot;)), OR(INCLUDES(Focus__c, &quot;Sales &amp; Marketing Effectiveness (US Only)&quot;), INCLUDES(Focus__c, &quot;Oncology (US Only)&quot;), INCLUDES(Focus__c, &quot;Payer (US Only)&quot;)))</errorConditionFormula>
        <errorMessage>You have selected a US Only value, please remove it</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Employee_Type_Contacts</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Contact_Type__c, &quot;Employee&quot;), OR(ISBLANK(Responsibility__c), ISBLANK(Focus__c), ISBLANK(TEXT(Geographic_Responsibility__c)), ISBLANK(TEXT(Function__c))))</errorConditionFormula>
        <errorMessage>Please populate these fields: Responsibility, Focus, Geographic Responsibility, Function</errorMessage>
    </validationRules>
</CustomObject>